--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,29 +57,29 @@ body{
 	margin: 0px 30px;
 	padding: 20px 30px;
 	border: 3px solid;
-	border-color: #6f5fdb;
+	border-color: #00d2ff;
 	border-radius: 20px;
 	text-align: center;
 	flex: 50%;
 }
 .ky_nang_left >i{
-	color: #6f5fdb;
+	color: #00d2ff;
 }
 .ky_nang_right{
 	margin: 0px 30px;
 	padding: 20px 30px;
 	border: 3px solid;
-	border-color: #6f5fdb;
+	border-color: #00d2ff;
 	border-radius: 20px;
 	text-align: center;
 	flex: 50%;
 }
 .ky_nang_right >i{
-	color: #6f5fdb;
+	color: #00d2ff;
 }
 h3{
 	font-size: 26px;
-	color: #6f5fdb;
+	color: #00d2ff;
 }
 .ky_nang_left >img{
 	width: 60%;
@@ -112,17 +112,17 @@ strong{
 	width: 30%;
 }
 .swiper .swiper-button-prev,.swiper .swiper-button-next{
-	color: #6f5fdb;
+	color: #00d2ff;
 	padding: 50px  300px 0px 300px;
 }
 .swiper .swiper-pagination-bullet-active{
-	background: #6f5fdb;
+	background: #00d2ff;
 }
 
 h2{
 	display: inline-block;
 	color: #fff;
-	background-color: #6f5fdb;
+	background-color: #00d2ff;
 	padding: 10px;
 	border-radius: 10px;
 }
@@ -145,7 +145,7 @@ h2{
   content: '';
   position: absolute;
   width: 6px;
-  background-color: #6f5fdb;
+  background-color: #00d2ff;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -169,7 +169,7 @@ h2{
   width: 25px;
   height: 25px;
   right: -17px;
-  background-color: #6f5fdb;
+  background-color: #00d2ff;
   border: 4px solid #FF9F55;
   top: 15px;
   border-radius: 50%;
@@ -195,9 +195,9 @@ h2{
   width: 0;
   z-index: 1;
   right: 111px;
-  border: medium solid #6f5fdb;
+  border: medium solid #00d2ff;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #6f5fdb;
+  border-color: transparent transparent transparent #00d2ff;
 }
 
 /* Thêm mũi tên vào vùng chứa bên phải (trỏ sang trái) */
@@ -209,9 +209,9 @@ h2{
   width: 0;
   z-index: 1;
   left: 32px;
-  border: medium solid #6f5fdb;
+  border: medium solid #00d2ff;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #6f5fdb transparent transparent;
+  border-color: transparent #00d2ff transparent transparent;
 }
 
 /* Cố định vòng tròn cho các thùng chứa ở phía bên phải */
@@ -227,7 +227,7 @@ h2{
 .content_timeline_left {
 	right: 80px;
   padding: 20px 30px;
-  background-color: #6f5fdb;
+  background-color: #00d2ff;
   position: relative;
   border-radius: 6px;
 }
@@ -237,7 +237,7 @@ h2{
 /*Nội dung content bên phải*/
 .content_timeline_right {
   padding: 20px 30px;
-  background-color: #6f5fdb;
+  background-color: #00d2ff;
   position: relative;
   border-radius: 6px;
 }
@@ -254,7 +254,7 @@ h2{
 .lien_he_container >.bank:hover{
 	color: yellow;
 	border-radius: 10px;
-	background-color: #6f5fdb; 
+	background-color: #00d2ff; 
 }
 
 @media (max-width: 820px){
@@ -268,7 +268,7 @@ h2{
 		margin: 0px 5px 0px 10px;
 		padding: 20px 20px;
 		border: 3px solid;
-		border-color: #6f5fdb;
+		border-color: #00d2ff;
 		border-radius: 20px;
 		text-align: center;
 		flex: 50%;
@@ -277,7 +277,7 @@ h2{
 		margin: 0px 10px 0px 5px;
 		padding: 20px 20px;
 		border: 3px solid;
-		border-color: #6f5fdb;
+		border-color: #00d2ff;
 		border-radius: 20px;
 		text-align: center;
 		flex: 50%;
@@ -299,7 +299,7 @@ h2{
   	height: 300px;
 	}
 	.swiper .swiper-button-prev,.swiper .swiper-button-next{
-		color: #6f5fdb;
+		color: #00d2ff;
 		padding: 0 60px;
 	}
 	/*timeline dịch vụ*/
@@ -325,9 +325,9 @@ h2{
   /* Đảm bảo rằng tất cả các mũi tên đều hướng sang trái */
   .left::before {
   left: 31px;
-  border: medium solid #6f5fdb;
+  border: medium solid #00d2ff;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #6f5fdb transparent transparent;
+  border-color: transparent #00d2ff transparent transparent;
   }
   .right::before{
   	left: -69px;
