--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,6 @@
 .footer_container{
 	text-align: center;
-	background-color: #6f5fdb;
+	background-color: #0068c8;
     box-shadow: 0 4px 10px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 10px rgba(0, 0, 0, 0.19);
 	padding: 66px /*50px 20px 50px*/;
 	color: black;
