--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -361,19 +361,21 @@ h2{
   }*/
 }
 /* video nhúng trên youtube */
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* Tỷ lệ 16:9 */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    background: #000;
-}
-
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+@media only screen and (max-width: 767px){
+	.video-container {
+	    position: relative;
+	    padding-bottom: 56.25%; /* Tỷ lệ 16:9 */
+	    height: 0;
+	    overflow: hidden;
+	    max-width: 100%;
+	    background: #000;
+	}
+	
+	.video-container iframe {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	}
 }
